update subscription links